--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
-    <version>2.8.0-rc05-SNAPSHOT</version>
+    <version>2.8.0</version>
     <artifactId>msgcntr</artifactId>
     <packaging>pom</packaging>
     <modules>
@@ -30,9 +30,9 @@
         <sakai.search.version>1.3.2</sakai.search.version>
     </properties>
     <scm>
-      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</developerConnection>
-    <url>https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</url>
+      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.8.0</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.8.0</developerConnection>
+    <url>https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.8.0</url>
   </scm>
     <distributionManagement>
         <downloadUrl>http://source.sakaiproject.org/maven2/
