--- a/messageforums-hbm/pom.xml
+++ b/messageforums-hbm/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.msgcntr</groupId>
         <artifactId>msgcntr</artifactId>
-        <version>2.7.6-SNAPSHOT</version>
+        <version>2.7.6</version>
     </parent>
     <name>Sakai Message Forums Hibernate Module</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
