--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
-    <version>2.7.6</version>
+    <version>2.7.7-SNAPSHOT</version>
     <artifactId>msgcntr</artifactId>
     <packaging>pom</packaging>
     <modules>
@@ -28,9 +28,9 @@
         <sakai.search.version>1.2.10</sakai.search.version>
     </properties>
     <scm>
-      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.7.6</connection>
-    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.7.6</developerConnection>
-    <url>https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.7.6</url>
+      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</connection>
+    <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</developerConnection>
+    <url>https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x</url>
   </scm>
     <distributionManagement>
         <downloadUrl>http://source.sakaiproject.org/maven2/
