--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -39,6 +39,12 @@
 			<type>pom</type>
 		</dependency>
 		<dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>jstl</artifactId>
+		  <!--<version>1.0.2</version>-->
+		  <scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 		</dependency>
