--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-standard-tool</artifactId>
-        <version>2.9-SNAPSHOT</version>
+        <version>2.8.2</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -23,11 +23,11 @@
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.common.version>1.2-SNAPSHOT</sakai.common.version>
-        <sakai.edu-services.version>1.2-SNAPSHOT</sakai.edu-services.version>
-        <sakai.jsf.version>2.9-SNAPSHOT</sakai.jsf.version>
-        <sakai.scheduler.version>2.9-SNAPSHOT</sakai.scheduler.version>
-        <sakai.search.version>1.4-SNAPSHOT</sakai.search.version>
+        <sakai.common.version>1.1.3</sakai.common.version>
+        <sakai.edu-services.version>1.1.2</sakai.edu-services.version>
+        <sakai.jsf.version>2.8.2</sakai.jsf.version>
+        <sakai.scheduler.version>2.8.1</sakai.scheduler.version>
+        <sakai.search.version>1.3.4</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
