--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
-        <artifactId>sakai-standard-tool</artifactId>
-        <version>2.8.2</version>
+        <artifactId>sakai-edu-tool</artifactId>
+        <version>2.8.3</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -23,11 +23,13 @@
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- 
         <sakai.common.version>1.1.3</sakai.common.version>
         <sakai.edu-services.version>1.1.2</sakai.edu-services.version>
-        <sakai.jsf.version>2.8.2</sakai.jsf.version>
-        <sakai.scheduler.version>2.8.1</sakai.scheduler.version>
-        <sakai.search.version>1.3.4</sakai.search.version>
+        -->
+        <sakai.jsf.version>2.8.3</sakai.jsf.version>
+        <sakai.scheduler.version>2.8.2</sakai.scheduler.version>
+        <sakai.search.version>1.3.5</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
