--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.sakaiproject.purepoms</groupId>
         <artifactId>sakai-edu-tool</artifactId>
-        <version>2.9-SNAPSHOT</version>
+        <version>2.9.0-a01</version>
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
@@ -23,9 +23,9 @@
     <properties>
         <url.localsite>scp://source.sakaiproject.org/var/www/html/release/msgcntr/${project.version}</url.localsite>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <sakai.jsf.version>2.9-SNAPSHOT</sakai.jsf.version>
-        <sakai.scheduler.version>2.9-SNAPSHOT</sakai.scheduler.version>
-        <sakai.search.version>1.4-SNAPSHOT</sakai.search.version>
+        <sakai.jsf.version>2.9.0-a01</sakai.jsf.version>
+        <sakai.scheduler.version>2.9.0-a01</sakai.scheduler.version>
+        <sakai.search.version>1.4.0-a01</sakai.search.version>
     </properties>
     <scm>
       <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/trunk</connection>
