--- a/messageforums-hbm/pom.xml
+++ b/messageforums-hbm/pom.xml
@@ -26,6 +26,7 @@
     <dependency>
       <groupId>org.sakaiproject.msgcntr</groupId>
       <artifactId>messageforums-api</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
