--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>commons-validator</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <!-- the oro dependency is only required for commons-validator 1.3.1 and less -->
+        <dependency>
+            <groupId>oro</groupId>
+            <artifactId>oro</artifactId>
+            <version>2.0.8</version>
+        </dependency> 
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
