--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -83,6 +83,10 @@
 			<artifactId>activation</artifactId>
 		</dependency>
 		<dependency>
+	        <groupId>org.hibernate</groupId>
+       		<artifactId>hibernate</artifactId>
+     	</dependency>
+     	<dependency>
        		<groupId>org.springframework</groupId>
        		<artifactId>spring</artifactId>
      	</dependency>
