--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -88,6 +88,29 @@
             <version>${sakai.scheduler.version}</version>
             <scope>provided</scope>
         </dependency>
+    <dependency>
+                <groupId>net.sf.json-lib</groupId>
+                <artifactId>json-lib</artifactId>
+                <version>2.2.3</version>
+                <classifier>jdk15</classifier>
+                <type>jar</type>
+        </dependency>
+    <dependency>
+                <groupId>net.sf.json-lib</groupId>
+                <artifactId>json-lib</artifactId>
+                <version>2.2.3</version>
+                <classifier>jdk15-sources</classifier>
+                <type>jar</type>
+        </dependency>
+    <dependency>
+                <groupId>net.sf.json-lib</groupId>
+                <artifactId>json-lib</artifactId>
+                <version>2.2.3</version>
+                <classifier>jdk15-javadoc</classifier>
+                <type>jar</type>
+        </dependency>
+
+
 	<dependency>
 	  <groupId>javax.servlet.jsp</groupId>
 	  <artifactId>jsp-api</artifactId>
