--- a/messageforums-components/pom.xml
+++ b/messageforums-components/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.sakaiproject.msgcntr</groupId>
     <artifactId>msgcntr</artifactId>
-    <version>2.8.4-SNAPSHOT</version>
+    <version>2.8.4</version>
   </parent>
   <name>Sakai Message Forums Components</name>
   <groupId>org.sakaiproject.msgcntr</groupId>
