--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <name>Sakai Message Center Base POM</name>
     <groupId>org.sakaiproject.msgcntr</groupId>
-    <version>2.8.4</version>
+    <version>2.8.5-SNAPSHOT</version>
     <artifactId>msgcntr</artifactId>
     <packaging>pom</packaging>
     <modules>
@@ -27,9 +27,9 @@
         <sakai.search.version>1.3.7</sakai.search.version>
     </properties>
     <scm>
-      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.8.4</connection>
-      <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.8.4</developerConnection>
-      <url>https://source.sakaiproject.org/svn/msgcntr/tags/msgcntr-2.8.4</url>
+      <connection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</connection>
+      <developerConnection>scm:svn:https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</developerConnection>
+      <url>https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x</url>
     </scm>
     <distributionManagement>
         <site>
