--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -92,6 +92,27 @@
 	  <groupId>javax.servlet.jsp</groupId>
 	  <artifactId>jsp-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.2.3</version>
+            <classifier>jdk15</classifier>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.2.3</version>
+            <classifier>jdk15-sources</classifier>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.2.3</version>
+            <classifier>jdk15-javadoc</classifier>
+            <type>jar</type>
+        </dependency>
 	</dependencies>
 	<build>
 		<resources>
