--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -62,6 +62,10 @@
 			<artifactId>entitybroker-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.sakaiproject.entitybroker</groupId>
+			<artifactId>entitybroker-utils</artifactId>
+		</dependency>
+		<dependency>
             <groupId>org.sakaiproject.edu-services.gradebook</groupId>
             <artifactId>gradebook-service-api</artifactId>
         </dependency>
@@ -113,6 +117,11 @@
             <classifier>jdk15-javadoc</classifier>
             <type>jar</type>
         </dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>0.11.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
