--- a/messageforums-app/pom.xml
+++ b/messageforums-app/pom.xml
@@ -79,13 +79,17 @@
 			<artifactId>commons-logging</artifactId>
 		</dependency>
 		<dependency>
-	        <groupId>org.hibernate</groupId>
-       		<artifactId>hibernate</artifactId>
-     	</dependency>
-     	<dependency>
-       		<groupId>org.springframework</groupId>
-       		<artifactId>spring</artifactId>
-     	</dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+		</dependency>
         <dependency>
             <groupId>org.sakaiproject.scheduler</groupId>
             <artifactId>scheduler-api</artifactId>
